Refactor: change /expenses/query response to object format, update OpenAPI specs and docs
